changes done for the required classes